--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ android {
 
 dependencies {
 
+    implementation 'com.google.mlkit:vision-common:16.5.0'
+    implementation 'com.google.android.gms:play-services-mlkit-face-detection:16.2.0'
     def camerax_version = "1.1.0-beta01"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
