updated dimension values for Gallery View

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ local.properties
 /.gradle/buildOutputCleanup/buildOutputCleanup.lock
 /.gradle/buildOutputCleanup/cache.properties
 /.gradle/buildOutputCleanup/outputFiles.bin
+/.idea/misc.xml
