Added code to show thumbnail from outputDirectory
but code in onResume() does not work correctly to pull the right outputDirectory

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ local.properties
 /.gradle/buildOutputCleanup/cache.properties
 /.gradle/buildOutputCleanup/outputFiles.bin
 /.idea/misc.xml
+/.gradle/checksums/checksums.lock
