Added OpenGalleryActivity to manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,13 @@
             android:theme="@style/Theme.SayCheesePictureTaker.NoActionBar"
             android:parentActivityName=".MainActivity">
         </activity>
+        <activity
+            android:name=".OpenGalleryActivity"
+            android:exported="false"
+            android:label="OpenGalleryActivity"
+            android:theme="@style/Theme.SayCheesePictureTaker.NoActionBar"
+            android:parentActivityName=".MainActivity">
+        </activity>
         </application>
 
 </manifest>
