--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
-    implementation 'me.angrybyte.slider:slider:1.4.2'
+    implementation 'com.ramotion.fluidslider:fluid-slider:0.3.1'
 }
