--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,12 @@ android {
 
 dependencies {
 
-    implementation 'com.google.mlkit:vision-common:16.5.0'
-    implementation 'com.google.android.gms:play-services-mlkit-face-detection:16.2.0'
+    implementation 'com.google.mlkit:vision-common:17.1.0'
+    implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.0.1'
+    implementation 'com.google.mlkit:object-detection:17.0.0'
+    implementation 'com.google.mlkit:object-detection-custom:17.0.0'
+    implementation 'com.google.mlkit:pose-detection:17.0.0'
+    implementation 'com.google.mlkit:pose-detection-accurate:17.0.0'
     def camerax_version = "1.1.0-beta01"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
@@ -51,13 +55,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation 'com.ramotion.fluidslider:fluid-slider:0.3.1'
-    implementation group: 'com.google.guava', name: 'guava', version: '23.5-android'
+    implementation group: 'com.google.guava', name: 'guava', version: '24.1-android'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 }
